--- a/census-ui/package.json
+++ b/census-ui/package.json
@@ -14,6 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^3.3.7",
+    "font-awesome-icons": "^1.4.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
